--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body {
-    padding: 10px;
+  padding: 10px;
+}
+
+/* Default Scrollbar */
+body::-webkit-scrollbar {
+  width: 8px; 
+  height: 8px; 
+}
+
+body::-webkit-scrollbar-thumb {
+  background: linear-gradient(to bottom, gray, white);
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-track {
+  background: #f0f0f0; 
+  border-radius: 10px; 
+}
+
+.custom-scroll {
+  scrollbar-width: thin; 
+  scrollbar-color: gray white; 
+}
+
+.custom-scroll::-webkit-scrollbar {
+  width: 5px; 
+  height: 5px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: linear-gradient(to bottom, red, blue);
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background: #121212; 
 }
